--- a/Virtualization/Learning/处理器虚拟化技术/第1章 系统平台/5. 系统启动.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第1章 系统平台/5. 系统启动.md
@@ -1,2 +1,2 @@
 
-系统的启动分为三个阶段: boot阶段、stage1阶段、stage2或者stage3阶段. Boot
+系统的启动分为三个阶段: boot阶段、stage1阶段、stage2或者stage3阶段. Boot阶段的主要工作是从磁盘上家在系统所需的模块, 对应的代码实现在`common/boot.asm`文件里
