--- Auto-Git Commit ---

--- a/Virtualization/Learning/处理器虚拟化技术/第1章 系统平台/5. 系统启动.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第1章 系统平台/5. 系统启动.md
@@ -3,4 +3,12 @@
 
 Boot阶段的主要工作是从磁盘上家在系统所需的模块, 对应的代码实现在`common/boot.asm`文件里.
 
-Stage1阶段进行第1阶段的初始化工作, 对应的代码实现在`common/setup
+Stage1阶段进行第1阶段的初始化工作, 对应的代码实现在`common/setup.asm`文件里.
+
+Stage2阶段开启分页机制后, 并做最后的初始化工作.
+
+Stage3阶段将切换到IA\-32e模式运行在64位环境里, 对应代码在`common/long.asm`文件里.
+
+# Boot阶段
+
+取决于映像文件系统类型, Boot模块存放在映像文件(或U盘)的0号或63号扇区.
