--- Auto-Git Commit ---

--- a/Virtualization/Learning/处理器虚拟化技术/第1章 系统平台/5. 系统启动.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第1章 系统平台/5. 系统启动.md
@@ -12,3 +12,11 @@ Stage3阶段将切换到IA\-32e模式运行在64位环境里, 对应代码在`co
 # Boot阶段
 
 取决于映像文件系统类型, Boot模块存放在映像文件(或U盘)的0号或63号扇区.
+
+- FAT文件类型的映像文件c.img或U盘: Boot模块存放在63号扇区.
+- Floppy映像文件demo.img: Boot模块存放在0号扇区.
+
+在BIOS运行的最后阶段, Boot模块由INIT19从磁盘里读入到内存7C00H位置上, 转入执行. 
+
+下面是Boot模块的执行流程.
+
