--- Auto-Git Commit ---

--- a/Virtualization/Learning/VT虚拟化内核技术/1. 资源和基础.md
+++ b/Virtualization/Learning/VT虚拟化内核技术/1. 资源和基础.md
@@ -1,4 +1,10 @@
 参照 https://bbs.pediy.com/thread-211973.html , 
 
-该部分在 https://github.com/haiwei-li/VT_Learn
+参照 HyperPlatform: https://github.com/tandasat/HyperPlatform (很全), 可以参考
+
+该部分在 https://github.com/haiwei-li/VT_Learn (入门)
+
+VT
+
+VT with EPT
 
