--- Auto-Git Commit ---

--- a/Virtualization/Learning/VT虚拟化内核技术/1. 资源和基础.md
+++ b/Virtualization/Learning/VT虚拟化内核技术/1. 资源和基础.md
@@ -1,10 +1,12 @@
 参照 https://bbs.pediy.com/thread-211973.html , 
 
-参照 HyperPlatform: https://github.com/tandasat/HyperPlatform (很全), 可以参考
+参照 HyperPlatform: https://github.com/tandasat/HyperPlatform (很全), 后面一些细节可以参考这个项目, 该作者的github项目很多都是和VT相关的
 
 该部分在 https://github.com/haiwei-li/VT_Learn (入门)
 
 VT
 
 VT with EPT
+
+Intel手册从Volume 3的23到33章.
 
