--- a/Linux/Learning/深入Linux内核架构/附录B 使用源代码/0. 说明.md
+++ b/Linux/Learning/深入Linux内核架构/附录B 使用源代码/0. 说明.md
@@ -1,3 +1,7 @@
 本附录将考虑两个我们最感兴趣的问题。
 
-如何对内核进行**配置**，使得根据**给定的体系结构**和**特定的计算机配置**，来限制源代码中对应的部分?编译过程是如何控制的?在内核重复为各种不同配置进行编译时，第二个问题就变得特别重 要。配置的修改没有影响的部分显然无须重新编译，这样可以节省大量时间。
+- 如何对内核进行**配置**，使得根据**给定的体系结构**和**特定的计算机配置**，来**限制**源代码中对应的部分?
+
+- **编译过程**是**如何控制**的?
+
+在内核**重复**为各种**不同配置**进行**编译**时，第二个问题就变得特别重要。配置的修改没有影响的部分显然无须重新编译，这样可以节省大量时间。
