--- a/Linux/Learning/深入Linux内核架构/附录B 使用源代码/1. 内核源代码的组织.md
+++ b/Linux/Learning/深入Linux内核架构/附录B 使用源代码/1. 内核源代码的组织.md
@@ -2,3 +2,7 @@
 内核源代码的主目录包含了若干子目录，对源代码的内容进行了粗略的分类。关键的内核组件位于下列目录中。
 
 - kernel目录包含了内核的**核心组件的代码**。其中只包含大约120个文件，总共大约80 000行代 17 码。对Linux这种规模的项目来说，这个数字小到令人惊讶。开发者强调，有一点非常重要: 除非绝对必要，否则不要向该目录添加内容;凡修改该目录中文件的补丁，都会被极端谨慎 地处理，而且在最后接受之前，通常会进行长期的讨论。
+- 高层的**内存管理**代码位于mm/目录。内存管理子系统由大约45 000行代码组成，几乎与内核本身的规模相同。
+- 用于初始化内核的代码位于init/目录。附录D将讨论相关内容。
+- **System V IPC机制**的实现位于ipc/目录，已经在第5章讨论过。
+- sound/包含了声卡的驱动程序。因为有许多**针对各种不同总线的设备**，该目录包含了一些总线相关的子目录，其中包含了对应的驱动程序的源代码。尽管声卡驱动程序有自身的目录， 但它们与其他设备驱动程序没什么不同。
