--- a/Linux/Learning/深入Linux内核架构/附录B 使用源代码/2. 用Kconfig进行配置.md
+++ b/Linux/Learning/深入Linux内核架构/附录B 使用源代码/2. 用Kconfig进行配置.md
@@ -7,10 +7,9 @@
 所以，内核采用了一种称之为**Kconfig的配置语言**，将在本节后面部分讨论。
 
 该配置语言必须解决下列问题。
-- 各组件可以持久编译到内核中、可以编译为组件或直接忽略掉(在某些环境下，可能无法将
-某些组件编译为模块)。
-- 在配置选项之间，可能存在相互依赖关系。换言之，某些选项只能与一个或多个其他选项连
-同使用。
+
+- 各组件可以持久编译到内核中、可以编译为组件或直接忽略掉(在某些环境下，可能无法将某些组件编译为模块)。
+- 在配置选项之间，可能存在相互依赖关系。换言之，某些选项只能与一个或多个其他选项连同使用。
 - 必须能够给出一个可用选项列表，供用户从中选择。有些情形，需要提示用户输入编号(或类似的值)。
 - 必须能够层次化地编排各种配置选项(在一个树型结构中)。
 - 配置选项可能依体系结构而不同。
