--- a/Linux/Learning/深入Linux内核架构/附录B 使用源代码/2. 用Kconfig进行配置.md
+++ b/Linux/Learning/深入Linux内核架构/附录B 使用源代码/2. 用Kconfig进行配置.md
@@ -21,3 +21,70 @@
 
 配置文件的语法并不特别复杂，如以下取自USB子系统的例子所示(稍作修改):
 
+```config
+drivers/usb/Kconfig
+#
+# USB device configuration
+#
+
+menuconfig "USB support"
+        bool "USB support"
+        depends on HAS_IOMEM
+        default y
+        ---help---
+         This option adds core support for Universal Serial Bus (USB).
+         You will also need drivers from the following menu to make use of it.
+if USB_SUPPORT
+
+config USB_ARCH_HAS_HCD
+        boolean
+        default y if USB_ARCH_HAS_OHCI
+        ...
+        default PCI
+
+config USB_ARCH_HAS_OHCI
+        boolean
+        # ARM:
+        default y if SA1111
+        default y if ARCH_OMAP
+        # PPC:
+        default y if STB03xxx
+        default y if PPC_MPC52xx
+        # MIPS:
+        default y if SOC_AU1X00
+        # more:
+        default PCI
+
+config USB
+        tristate "Support for USB"
+        depends on USB_ARCH_HAS_HCD
+        ---help---
+          Universal Serial Bus (USB) is a specification for a serial bus
+          subsystem which offers higher speeds and more features than the
+          traditional PC serial port. The bus supplies power to peripherals
+          ...
+
+source "drivers/usb/core/Kconfig"
+source "drivers/usb/host/Kconfig"
+...
+source "drivers/usb/net/Kconfig"
+
+comment "USB port drivers"
+        depends on USB
+
+config USB_USS720
+        tristate "USS720 parport driver"
+        depends on USB && PARPORT
+        ---help---
+          This driver is for USB parallel port adapters that use the Lucent
+          Technologies USS-720 chip. These cables are plugged into your USB
+          port and provide USB compatibility to peripherals designed with
+          parallel port interfaces.
+          ...
+
+source "drivers/usb/gadget/Kconfig"
+
+endif # USB_SUPPORT
+```
+
+图B\-2说明了如何在屏幕上显示定义的树型结构，使得用户可以选择想要的选项。
