--- Auto-Git Commit ---

--- a/Linux/Learning/深入Linux内核架构/附录B 使用源代码/2. 用Kconfig进行配置.md
+++ b/Linux/Learning/深入Linux内核架构/附录B 使用源代码/2. 用Kconfig进行配置.md
@@ -91,3 +91,11 @@ endif # USB_SUPPORT
 
 图B-2 USB子系统配置结构的屏幕显示:
 
+![2020-01-25-21-00-10.png](./images/2020-01-25-21-00-10.png)
+
+menuconfig产生一个菜单项，其标题是一个字符串，在这里是USB support。在用户用make menuconfig或图形化的make xconfig或make gconfig配置内核时，该菜单项会作为一个新子树的根 出现。所做的选择保存在一个变量中，这里是USB_SUPPORT，有两个可能的值，因为这是一个布尔型 变量，由bool标明。如果取消对USB_SUPPORT的选择，那么配置树中不会出现与USB相关的其他配置 信息，这可以由if字句保证。
+
+通过source，可以将更多的配置文件关联进来(按照惯例，它们都名为Kconfig)。这些配置文件的文本内容，将直接包含到嵌入的配置文件中进行解释。
+
+comment在配置选项列表中创建一个注释。注释的文本会显示，但用户不能进行选择。
+
