--- Auto-Git Commit ---

--- a/Linux/Learning/深入Linux内核架构/附录B 使用源代码/2. 用Kconfig进行配置.md
+++ b/Linux/Learning/深入Linux内核架构/附录B 使用源代码/2. 用Kconfig进行配置.md
@@ -93,9 +93,46 @@ endif # USB_SUPPORT
 
 ![2020-01-25-21-00-10.png](./images/2020-01-25-21-00-10.png)
 
-menuconfig产生一个菜单项，其标题是一个字符串，在这里是USB support。在用户用make menuconfig或图形化的make xconfig或make gconfig配置内核时，该菜单项会作为一个新子树的根 出现。所做的选择保存在一个变量中，这里是USB_SUPPORT，有两个可能的值，因为这是一个布尔型 变量，由bool标明。如果取消对USB_SUPPORT的选择，那么配置树中不会出现与USB相关的其他配置 信息，这可以由if字句保证。
+menuconfig产生一个菜单项，其标题是一个字符串，在这里是USB support。在用户用make menuconfig或图形化的make xconfig或make gconfig配置内核时，该菜单项会作为一个新子树的根 出现。所做的选择保存在一个变量中，这里是USB_SUPPORT，有两个可能的值，因为这是一个布尔型变量，由bool标明。如果取消对USB_SUPPORT的选择，那么配置树中不会出现与USB相关的其他配置 信息，这可以由if字句保证。
 
 通过source，可以将更多的配置文件关联进来(按照惯例，它们都名为Kconfig)。这些配置文件的文本内容，将直接包含到嵌入的配置文件中进行解释。
 
 comment在配置选项列表中创建一个注释。注释的文本会显示，但用户不能进行选择。
 
+实际的配置选项通过config指定。对每个选项来说，只有一个config类型的数据项。config之后的字符串称之为配置符号(configuration symbol)，可接受用户选择。每个选项都需要一个类型，来定义用户可以进行什么样类型的选择。在本例中，选择的类型是三态的，即可以选择下面的一个: “compiled in”、“modular”或“do not compile”。根据所做的选择，配置符号会分布赋值y、m、n。除了三态之外，内核还提供了其他的选择类型，将在本节稍后讨论。
+
+配置选项的依赖关系通过depends on指定。其他的配置符号传递到该语句作为参数，它们可用使用C语言中的逻辑运算符连接起来(&&、||、!，分别是与、或、非)。除非所指定的前提条件满足， 否则菜单项是不显示的。
+
+`--help--`表示其后的文字是帮助文本，如果用户不确认配置项的语义，就可以显示帮助文本。
+
+缩进的改变表示帮助文本结束，内核就知道又需要处理通常的配置语句了。 例子中给出了两个配置选项。第一个定义了USB配置符号，所有其他配置项都依赖该选项。但除非存在一个USB宿主机控制器，否则该选项是不显示的。显示与否，取决于USB_ARCH_HAS_HCD配置 选项为true还是false。为该选项指定true值有不同的方式，例子中给出了以下两种方式:
+
+- 直接支持某种宿主机控制器芯片组(例子中的OHCI);
+- 支持PCI总线(即配置符号PCI为true)。 
+
+如果设置了USB_ARCH_HAS_OHCI，那么OHCI芯片组支持是可用的。在支持PCI总线时，总是这样。但有些系统可能在没有PCI支持的情况下使用该芯片组。这些系统将显式列出并包括进来，例如基于 ARM的机器和一些基于PPC的型号。
+
+第二个配置选项(USS720)依赖两件事情。系统不仅要支持USB，还需要支持并行端口。否则， 驱动选项根本不会显示。
+
+如例子所示，在注释之间以及配置选项之间，可能存在依赖关系。除非选中了USB支持，否则USB Port drivers项不会显示。
+
+配置树的生成从`arch/arch/Kconfig`开始，它首先由配置文件读取。所有其他Kconfig文件都通 过source递归地包含进来。
+
+# Kconfig的语言要素
+
+前一个例子并没有完全使用Kconfig语言的所有选项。本节根据内核源代码中的文档，对其所有语言特性给出一个系统化的概述.
+
+注: 该文档在`Documentation/kbuild/kconfig-language.txt`中.
+
+## 菜单
+
+菜单使用以下命令指定:
+
+```
+menu "string" 
+    <attributes> 
+
+<configuration options> 
+
+endmenu
+```
