--- Auto-Git Commit ---

--- a/Linux/Learning/深入Linux内核架构/附录B 使用源代码/2. 用Kconfig进行配置.md
+++ b/Linux/Learning/深入Linux内核架构/附录B 使用源代码/2. 用Kconfig进行配置.md
@@ -136,3 +136,71 @@ menu "string"
 
 endmenu
 ```
+
+其中string是菜单的名称。menu和endmenu之间所有项都解释为该菜单的菜单项，自动地从菜单继承了依赖关系(将添加到菜单项现存的依赖关系中)。
+
+关键字menuconfig用于定义一个配置符号和一个子菜单。那么下述写法可以进行调整:
+
+```
+menu "Bit bucket compression support" 
+
+    config BIT_BUCKET_ZLIB 
+        tristate "Bit bucket compression support
+```
+
+可以调整为下述更简短的格式:
+
+```
+menuconfig BIT_BUCKET_ZLIB
+        tristate "Bit bucket compression support"
+```
+
+另一个关键字mainmenu，只能出现在配置层次结构的顶部(且只能出现一次)，用于为整个层次 结构指定一个标题。因而该项只用于arch/arch/Kconfig中，因为这些文件表示配置层次结构的起始 点。例如，用于Sparc64处理器的版本包含以下项:
+
+```
+mainmenu "Linux/UltraSPARC Kernel Configuration"
+```
+
+## 配置选项
+
+配置选项由关键字config开头，必须后接一个配置符号。
+
+```
+config <symbol> 
+    <type-name> "Description" 
+    <attributes>
+```
+
+类型名(`<type-name>`)表示选项的类型。如前所述，tristate类型的值为以下一种状态:y、 n或m。其他的选项类型如下所示:
+
+- bool用于返回y或者n的布尔查询，即是否选中该项。  string查询一个字符串。
+- hex和integer分别读取十六进制和十进制数。 
+
+还可以使用下列语法:
+
+```
+config <symbol> 
+    <type-name> 
+    prompt "Description
+```
+
+从功能上讲，它与前者是等价的，但较为简短。
+
+如果要求用户从一组选项中选择一个，则必须使用choice，其语法如下：
+
+```
+choice 
+    <attributes> 
+
+config <symbol_1> 
+    <type-name> 
+    <attributes> 
+
+... 
+
+config <symbol_n> 
+    <type-name> 
+    <attributes> 
+
+endchoice
+```
