--- Auto-Git Commit ---

--- a/Linux/Learning/深入Linux内核架构/附录B 使用源代码/2. 用Kconfig进行配置.md
+++ b/Linux/Learning/深入Linux内核架构/附录B 使用源代码/2. 用Kconfig进行配置.md
@@ -204,3 +204,115 @@ config <symbol_n>
 
 endchoice
 ```
+
+每个配置选项都有自身的配置符号，如果选中对应的选项，则其值是y，否则为n。choice通常 表示为配置前端界面上的一组单选按钮，如图B\-3所示。
+
+图B\-3 用choice在IA\-32平台上选择CPU
+
+![2020-01-25-21-24-52.png](./images/2020-01-25-21-24-52.png)
+
+图B-3中CPU选择部分的源代码如下所示(为提高可读性，已经省去了帮助文本):
+
+```
+choice
+        prompt "Processor family"
+        default M686 if X86_32
+
+config M386
+        bool "386"
+        depends on X86_32 && !UML
+        ---help---
+        这里用于为用户的CPU选择处理器类型。该信息用于优化。为编译在所有x86 CPU类型上都能运行的
+        内核（可能不是最快），可以在这里指定"386"类型。
+        ...
+
+config M486
+        bool "486"
+
+config M586
+        bool "586/K5/5x86/6x86/6x86MX"
+
+config M586TSC
+        bool "Pentium-Classic"
+
+config M586MMX
+        bool "Pentium-MMX"
+
+config M686
+        bool "Pentium-Pro"
+
+config MPENTIUMII
+        bool "Pentium-II/Celeron(pre-Coppermine)"
+
+...
+
+config MGEODE_LX
+        bool "Geode GX/LX"
+
+config MCYRIXIII
+        bool "CyrixIII/VIA-C3"
+
+config MVIAC3_2
+        bool "VIA C3-2 (Nehemiah)"
+
+...
+endchoice
+```
+
+## 属性
+
+属性用于更准确地指定配置选项的效果。内核源代码的下列片段使用了属性:
+
+```
+config SWAP 
+        bool "Support for paging of anonymous memory (swap)" 
+        depends on MMU & BLOCK 
+        default y
+```
+
+depends on指定，仅当为带有MMU的系统编译内核时，而且在块层编译到内核值时，才能选中SWAP。default表示默认情况下选择y，如果用户不修改设置，该值将自动地指派给SWAP符号。
+
+在我们讲解如何指定依赖关系（在下一小节讲述）之前，先来了解下列属性。
+ 
+- default指定了配置项的默认设置。对于bool查询，可能的默认值是y或n。对于tristate类型来说，m是第三种可能性。对于其他类型的选项，必须指定默认值。string需要指定字符串，而integer和hex需要指定数值。
+- range限制了数值选项的可能范围。第一个参数指定下限，第二个参数指定上限。
+- 在使用select语句选中配置项的情况下，select用于自动地选择其他的配置选项。这种逆向依赖机制只能用于tristate和bool类型的选项。
+- help和--help--用于加入帮助文本，如前文所示。
+
+所有这些属性都可能后接if子句，其中指定了应用该属性的条件。类似depends on，这里也会将该属性依赖的符号通过逻辑运算符连接起来进行判断，如下例（虚构的）所示：
+
+```
+config ENABLE_ACCEL
+  bool "Enable device acceleration"
+  default n
+
+...
+
+config HYPERCARD_SPEEDUP
+  integer "HyperCard Speedup"
+  default 20 if ENABLE_ACCEL
+  range 1 20 
+```
+
+## 依赖关系
+
+前文解释过，配置项的依赖关系可以通过逻辑子句指定，其语法类似于C语言。依赖关系的规范结构如下所示：
+
+```
+depends [on] <expr>
+<expr> ::= <Symbol>
+           <Symbol> '=' <Symbol>
+           <Symbol> ''=' <Symbol>
+        '  (' <expr> ')'
+        '! ' <expr>
+        <expr> '&&' <expr>
+        <expr> '||' <expr>
+```
+
+可能的表达式按其解释次序依次列出。换言之，排在前面的表达式，其优先级高于排在后面的。
+
+操作的语义与C语言语法中对应的操作相同：y = 2，n = 0，而m = 1。除非依赖关系计算的结果非0，否则菜单项是不可见的。
+
+一种特定的依赖关系通过"EXPERIMENTAL"指定。仍然处于试验阶段的驱动程序必须用该依赖关 系标记(如果该驱动程序自身还有其他依赖关系，则需要用&&逻辑操作连接)。因为内核在 init/Kconfig中提供了一个配置选项，允许用户将该符号设置为y或n(提示用户处于开发阶段和/或 不完整的代码/驱动程序)，对渴求稳定性的用户来说，很容易从配置选项中删除此类驱动程序。字符串"(Experimental)"应该出现在末尾，表明该驱动程序的代码实际上是试验性的。
+
+# 
