--- Auto-Git Commit ---

--- a/Linux/Learning/深入Linux内核架构/附录B 使用源代码/2. 用Kconfig进行配置.md
+++ b/Linux/Learning/深入Linux内核架构/附录B 使用源代码/2. 用Kconfig进行配置.md
@@ -315,4 +315,55 @@ depends [on] <expr>
 
 一种特定的依赖关系通过"EXPERIMENTAL"指定。仍然处于试验阶段的驱动程序必须用该依赖关 系标记(如果该驱动程序自身还有其他依赖关系，则需要用&&逻辑操作连接)。因为内核在 init/Kconfig中提供了一个配置选项，允许用户将该符号设置为y或n(提示用户处于开发阶段和/或 不完整的代码/驱动程序)，对渴求稳定性的用户来说，很容易从配置选项中删除此类驱动程序。字符串"(Experimental)"应该出现在末尾，表明该驱动程序的代码实际上是试验性的。
 
-# 
+# 处理配置信息
+
+按下列步骤处理配置信息。
+
+(1) 内核首先由用户配置。这预先假定已经准备好所有可能选项的一个列表，并以文本或图形方 式呈现出来(可用的配置已经根据所选的体系结构进行了限制，这一点无须用户干涉)。
+
+(2) 接下来将用户的选择保存到一个独立的文件中，一直保持到下一次(重新)配置之前，并保 证所用的工具能够访问该文件。
+
+(3)所选的配置符号必须存在，对于由一系列Makefile实现的联编系统和内核源代码中的预处理器 语句来说，都要求如此。
+
+在发起内核配置时，有各种make目标(make destconfig)。各自都有不同的用途。
+
+- menuconfig提供了一个控制台驱动的前端，而xconfig和gconfig则提供了基于各种X11工具包(Qt或GTK)的图形用户界面。
+- oldconfig分析已经保存在.config中的配置选项，对可能在内核更新之后添加、但尚未进行选择的选项作出提示。
+- defconfig应用由体系结构维护者定义的默认配置(相关信息保存在arch/arch/defconfigk中)。
+- allyesconfig创建一个新的配置文件，其中所有选择都设置为y(在支持y值的选项处)。allmodconfig也将所有选项都设置为y，但在可能的情况下会使用m。allnoconfig产生一个最低限度的配置，其中删除了编译关键内核组件不需要的其他选项。 
+
+这三种目标在建立新的内核发布版时，用于进行测试。通常，最终用户在使用它们时都存在问题。 所有配置选项都必须分析各个Kconfig文件中的配置信息，还必须保存结果配置。内核源代码为此提供了libkconfig库。它提供了例程来执行适当的任务。本附录不讨论解析器的实现，其中采用 了Bison和Flex这两个解析器和词法分析器的生成工具。相关的源代码可参见scripts/kconfig/zconf.y和zconf.l。
+
+用户定义的配置选项保存在`.config`中，如下所示:
+
+```config
+wolfgang@meitner> cat .config
+#
+# Automatically generated make config: don't edit # Linux kernel version: 2.6.24
+# Thu Mar 20 00:09:15 2008
+#
+CONFIG_64BIT=y
+# CONFIG_X86_32 is not set
+CONFIG_X86_64=y
+CONFIG_X86=y
+CONFIG_GENERIC_TIME=y
+...
+#
+# General setup
+#
+CONFIG_EXPERIMENTAL=y
+CONFIG_LOCK_KERNEL=y
+CONFIG_INIT_ENV_ARG_LIMIT=32 CONFIG_LOCALVERSION="-default" CONFIG_LOCALVERSION_AUTO is not set
+...
+CONFIG_PLIST=y
+CONFIG_HAS_IOMEM=y
+CONFIG_HAS_IOPORT=y
+CONFIG_HAS_DMA=y
+CONFIG_CHECK_SIGNATURE=y
+```
+
+所有配置符号的前缀都是CONFIG_字符串。如果设置了相关配置项，则在其后附加= y或= n。未设置的选项使用\#号注释掉。
+
+为使内核源代码能够看到所选的配置，必须包含`<config.h>`文件。该文件又将`<autoconf.h>`包含到源代码中。后者包含了预处理器可以提取的配置信息，如下所示:
+
+```
