--- Auto-Git Commit ---

--- a/Linux/Learning/深入Linux内核架构/附录B 使用源代码/2. 用Kconfig进行配置.md
+++ b/Linux/Learning/深入Linux内核架构/附录B 使用源代码/2. 用Kconfig进行配置.md
@@ -367,3 +367,40 @@ CONFIG_CHECK_SIGNATURE=y
 为使内核源代码能够看到所选的配置，必须包含`<config.h>`文件。该文件又将`<autoconf.h>`包含到源代码中。后者包含了预处理器可以提取的配置信息，如下所示:
 
 ```
+<autoconf.h>
+/*
+* Automatically generated C config: don't edit
+* Linux kernel version: 2.6.24
+* Thu Mar 20 00:09:26 2008
+*/
+#define AUTOCONF_INCLUDED
+#define CONFIG_USB_SISUSBVGA_MODULE 1
+#define CONFIG_USB_PHIDGETMOTORCONTROL_MODULE 1
+#define CONFIG_VIDEO_V4L1_COMPAT 1
+#define CONFIG_PCMCIA_FMVJ18X_MODULE 1
+...
+#define CONFIG_USB_SERIAL_SIERRAWIRELESS_MODULE 1
+#define CONFIG_VIDEO_SAA711X_MODULE 1
+#define CONFIG_SATA_INIC162X_MODULE 1
+#define CONFIG_AIC79XX_RESET_DELAY_MS 15000
+#define CONFIG_NET_ACT_GACT_MODULE 1
+...
+#define CONFIG_USB_BELKIN 1
+#define CONFIG_NF_CT_NETLINK_MODULE 1
+#define CONFIG_NCPFS_PACKET_SIGNING 1
+#define CONFIG_SND_USB_AUDIO_MODULE 1
+#define CONFIG_I2C_I810_MODULE 1
+#define CONFIG_I2C_I801_MODULE 1
+```
+
+配置符号的前缀仍然是`CONFIG_`。每个选中的选项都定义为1。模块选项同样定义为1，但预处理 器符号末尾附加了`_MODULE`字符串。未选择的配置项用undef明确地标记为未定义。数值和字符串都替换为用户选择的值。
+
+这使得可以向源代码中插入对配置信息的查询。例如:
+
+```
+#ifdef CONFIG_SYMBOL
+/* 设置SYMBOL情况下的代码 */ 
+#else
+/* 未设置SYMBOL情况下的代码 */ 
+#endif
+```
