--- Auto-Git Commit ---

--- a/Linux/Learning/深入Linux内核架构/附录B 使用源代码/4. 有用的工具.md
+++ b/Linux/Learning/深入Linux内核架构/附录B 使用源代码/4. 有用的工具.md
@@ -7,4 +7,8 @@ LXR是一个**交叉引用工具**。它分析内核源代码并生成一个HTML
 
 在Linux早期，内核补丁是跟踪内核开发进展情况的必由之路。补丁目前仍然发挥着重要的作用，因为git隐含地基于diff和补丁，另外在通过邮件列表来讨论修改时，补丁是必需的。
 
-patch和diff是两个互补的工具。diff分析两个文件或一组文件之间的差别，而patch则将diff 生成的差别文件应用到现存的源文件。
+patch和diff是两个互补的工具。
+
+- diff分析两个文件或一组文件之间的差别，
+- patch则将diff 生成的差别文件**应用到现存的源文件**。
+
