--- Auto-Git Commit ---

--- a/Linux/Learning/深入Linux内核架构/附录B 使用源代码/4. 有用的工具.md
+++ b/Linux/Learning/深入Linux内核架构/附录B 使用源代码/4. 有用的工具.md
@@ -12,3 +12,6 @@ patch和diff是两个互补的工具。
 - diff分析两个文件或一组文件之间的差别，
 - patch则将diff 生成的差别文件**应用到现存的源文件**。
 
+## 统一的上下文diff
+
+下列例子说明了diff用于记录文件两个版本之间差别的格式。例子文件反映了内核版本2.6.24开发期间对调度器所进行的一个改变。
