--- a/Linux/Learning/深入Linux内核架构/附录B 使用源代码/4. 有用的工具.md
+++ b/Linux/Learning/深入Linux内核架构/附录B 使用源代码/4. 有用的工具.md
@@ -15,3 +15,40 @@ patch和diff是两个互补的工具。
 ## 统一的上下文diff
 
 下列例子说明了diff用于记录文件两个版本之间差别的格式。例子文件反映了内核版本2.6.24开发期间对调度器所进行的一个改变。
+
+```
+“diff -up a/include/linux/sched.h b/include/linux/sched.h
+--- a/include/linux/sched.h
++++ b/include/linux/sched.h
+@@ -908,6 +908,7 @@ struct sched_entity {
+  u64 sum_exec_runtime;
+  u64 vruntime;
+  u64 prev_sum_exec_runtime;
++ u64 last_min_vruntime;
+
+#ifdef CONFIG_SCHEDSTATS
+  u64 wait_start;
+diff -up a/kernel/sched.c b/kernel/sched.c
+--- a/kernel/sched.c
++++ b/kernel/sched.c
+@@ -1615,6 +1615,7 @@ static void __sched_fork(struct task_struct *p)
+  p->se.exec_start = 0;
+  p->se.sum_exec_runtime = 0;
+  p->se.prev_sum_exec_runtime = 0;
++ p->se.last_min_vruntime = 0;
+
+#ifdef CONFIG_SCHEDSTATS
+  p->se.wait_start = 0;
+@@ -6495,6 +6496,7 @@ static inline void init_cfs_rq(struct cfs_rq *cfs_rq, struct rq *rq)
+#ifdef CONFIG_FAIR_GROUP_SCHED
+  cfs_rq->rq = rq;
+#endif
++ cfs_rq->min_vruntime = (u64)(-(1LL << 20));
+}
+
+void __init sched_init(void)
+diff -up a/kernel/sched_fair.c b/kernel/sched_fair.c
+--- a/kernel/sched_fair.c
++++ b/kernel/sched_fair.c
+@@ -243,6 +243,15 @@ static u64 sched_slice(struct cfs_rq *cfs_rq, struct sched_entity *se)
+
