--- Auto-Git Commit ---

--- a/Linux/Learning/深入Linux内核架构/附录B 使用源代码/4. 有用的工具.md
+++ b/Linux/Learning/深入Linux内核架构/附录B 使用源代码/4. 有用的工具.md
@@ -17,7 +17,7 @@ patch和diff是两个互补的工具。
 下列例子说明了diff用于记录文件两个版本之间差别的格式。例子文件反映了内核版本2.6.24开发期间对调度器所进行的一个改变。
 
 ```
-“diff -up a/include/linux/sched.h b/include/linux/sched.h
+diff -up a/include/linux/sched.h b/include/linux/sched.h
 --- a/include/linux/sched.h
 +++ b/include/linux/sched.h
 @@ -908,6 +908,7 @@ struct sched_entity {
@@ -51,4 +51,21 @@ diff -up a/kernel/sched_fair.c b/kernel/sched_fair.c
 --- a/kernel/sched_fair.c
 +++ b/kernel/sched_fair.c
 @@ -243,6 +243,15 @@ static u64 sched_slice(struct cfs_rq *cfs_rq, struct sched_entity *se)
+“return period;
+}
+
++static u64 __sched_vslice(unsigned long nr_running)
++{
++ u64 period = __sched_period(nr_running);
++
++ do_div(period, nr_running);
++
++ return period;
++}
++
+/*
+```
+
+* 更新当前进程的运行时统计信息。如果当前进程不在我们的调度类中，则跳过该进程。
+
 
