--- Auto-Git Commit ---

--- a/Linux/Learning/深入Linux内核架构/附录B 使用源代码/4. 有用的工具.md
+++ b/Linux/Learning/深入Linux内核架构/附录B 使用源代码/4. 有用的工具.md
@@ -68,4 +68,4 @@ diff -up a/kernel/sched_fair.c b/kernel/sched_fair.c
 
 * 更新当前进程的运行时统计信息。如果当前进程不在我们的调度类中，则跳过该进程。
 
-
+**diff**的**前三行**包含了**头信息**。它表示**所处理的文件**，并包含了两个文件的时间戳作为比较准则。 第二行给出了旧版本文件的名称，而第三行给出了新版本文件的名称。第一行列出了调用diff实用程 序的选项。这里，-up选项特别重要，因为它将控制diff以易读的统一上下文格式生成diff文件，其中 还包括修改所涉及的C语言函数名，在Linux内核社区中，所有其他格式都已经废弃。
