--- Auto-Git Commit ---

--- a/Linux/Learning/深入Linux内核架构/附录B 使用源代码/5. 调试和分析内核.md
+++ b/Linux/Learning/深入Linux内核架构/附录B 使用源代码/5. 调试和分析内核.md
@@ -1,4 +1,6 @@
 不仅要阅读**静态的源代码**，还需要在**内核运行时**密切观察，以跟踪其内部的动态过程。
 
-对**普通的C语言程序**，程序员很清楚如何做到这一点。使用编译器生成的调试 信息和一个外部调试器，就可以逐行单步跟踪程序的执行(或者，如果需要，可以逐行汇编跟踪)， 来查看和修改数据结构，并在任一点暂停程序的控制流。
+对**普通的C语言程序**，程序员很清楚如何做到这一点。使用**编译器生成的调试信息**和**一个外部调试器**，就可以**逐行单步跟踪程序的执行**(或者，如果需要，可以**逐行汇编跟踪**)，来查看和修改数据结构，并在任一点暂停程序的控制流。
+
+与**普通的C程序不同**，内核本身没有由外部实例提供的运行环境，内核本身负责提供用户空间程序所需的这个运行环境。因而，不可能用经典方式来调试内核本身。
 
