--- Auto-Git Commit ---

--- a/Linux/Learning/深入Linux内核架构/第13章 系统调用/1. 系统程序设计基础.md
+++ b/Linux/Learning/深入Linux内核架构/第13章 系统调用/1. 系统程序设计基础.md
@@ -43,3 +43,16 @@ int main() {
 **内核**自然需要为**记录系统调用**提供**专门的支持**，这将在13.3.3节讨论\[不出所料，这项支持功能也是一个系统调用(ptrace)，我们只对其输出感兴趣]。
 
 接下来使用strace命令将shead(上述的例子程序)发出的所有系统调用的列表写到log.txt中:
+
+```
+strace -o log.txt ./shead
+```
+
+log.txt的内容比读者的预期可能要多很多:
+
+![2020-01-26-18-27-59.png](./images/2020-01-26-18-27-59.png)
+
+跟踪记录显示，该应用程序进行了**大量**源代码中**没有明确列出的系统调用**。因此，strace的**输出并不容易阅读**。
+
+为此，上文复制的文本中，但凡能够在例子程序的**C源代码中找到对应系统调用的行**，都以**斜体**显示。其他行对应的系统调用，是由编译时**自动添加**的一些代码生成的。
+
