--- Auto-Git Commit ---

--- a/Linux/Learning/深入Linux内核架构/第13章 系统调用/1. 系统程序设计基础.md
+++ b/Linux/Learning/深入Linux内核架构/第13章 系统调用/1. 系统程序设计基础.md
@@ -54,5 +54,13 @@ log.txt的内容比读者的预期可能要多很多:
 
 跟踪记录显示，该应用程序进行了**大量**源代码中**没有明确列出的系统调用**。因此，strace的**输出并不容易阅读**。
 
-为此，上文复制的文本中，但凡能够在例子程序的**C源代码中找到对应系统调用的行**，都以**斜体**显示。其他行对应的系统调用，是由编译时**自动添加**的一些代码生成的。
+为此，上文复制的文本中，但凡能够在例子程序的**C源代码中找到对应系统调用的行**，都以**斜体**显示。其他行对应的系统调用，是由编译时**自动添加**的一些代码生成的。**其他的系统调用**是由启动和运行应用程序所需的**框架代码生成**的，例如，**C标准库**是**动态映射**到**进程内存区**的。其他调用，如`old_mmap`和`unmap`，负责管理应用程序使用的动态内存区域。
+
+...
+
+使用strace工具还有一个好处，无须接触所跟踪应用程序的源代码即可了解其内部结构和运作方式。
+
+...
+
+# 支持的标准
 
