--- a/Linux/Learning/深入Linux内核架构/第13章 系统调用/1. 系统程序设计基础.md
+++ b/Linux/Learning/深入Linux内核架构/第13章 系统调用/1. 系统程序设计基础.md
@@ -64,3 +64,14 @@ log.txt的内容比读者的预期可能要多很多:
 
 # 支持的标准
 
+在所有类型的UNIX操作系统中，系统调用都是特别重要的。系统调用的作用范围、速度、高效 实现是影响系统性能的一个主要因素。LINUX中系统调用的实现非常高效，这一点将在13.3节阐述。
+
+同样重要的是可用例程的多样性和选择权，这使得(应用程序和标准库)程序员的生活更加轻松，并促进了程序在各种不同UNIX变体之间在源代码级别上的可移植性。在UNIX超过25年的历史中，这促进 了标准和事实标准的出现，从而使得**不同系统的接口**具有一致性。
+
+POSIX标准(这是Portable Operating System Interface for UNIX的首字母缩写词，也揭示了该标准 的目的)已经成为该领域的主导标准。Linux和C标准库尽力遵循POSIX标准，这也是为什么值得对 POSIX标准进行简要讨论的原因。从20世纪80年代末POSIX第一个版本发布以来，该标准涵盖的范围 急速扩展(当前版本包括4卷1)，现在许多程序员认为它已经太长也太复杂。
+
+Linux内核基本上与POSIX-1003.1标准兼容。很自然，标准的新发展需要一定的时间才能渗透到 内核代码中。
+
+除了POSIX之外，还有**其他标准**，这些**不是**由**某个委员会**制定的，而是来源于UNIX和类UNIX操作系统的**开发**。在UNIX的历史中，**两条开发主线**产生了两个独立的系统，一个是System V(直接起 源于AT&T的原始代码)，另一个是BSD(Berkeley Software Distribution，在加州大学开发，现在市场 上的NetBSD、FreeBSD、OpenBSD都是基于BSD的，还有基于BSD的商业系统，如BSDI和MacOS X)。
+
+Linux提供的系统调用汲取自所有上述3个来源，当然是独立实现的。其中没有使用竞争系统的代 码，这仅仅是因为法律和许可方面的问题。例如，下面列出的3个著名的系统调用起源于3个不同的阵 营。
