--- a/Linux/Learning/深入Linux内核架构/第13章 系统调用/1. 系统程序设计基础.md
+++ b/Linux/Learning/深入Linux内核架构/第13章 系统调用/1. 系统程序设计基础.md
@@ -72,6 +72,10 @@ POSIX标准(这是Portable Operating System Interface for UNIX的首字母缩写
 
 Linux内核基本上与POSIX-1003.1标准兼容。很自然，标准的新发展需要一定的时间才能渗透到 内核代码中。
 
-除了POSIX之外，还有**其他标准**，这些**不是**由**某个委员会**制定的，而是来源于UNIX和类UNIX操作系统的**开发**。在UNIX的历史中，**两条开发主线**产生了两个独立的系统，一个是System V(直接起 源于AT&T的原始代码)，另一个是BSD(Berkeley Software Distribution，在加州大学开发，现在市场 上的NetBSD、FreeBSD、OpenBSD都是基于BSD的，还有基于BSD的商业系统，如BSDI和MacOS X)。
+除了POSIX之外，还有**其他标准**，这些**不是**由**某个委员会**制定的，而是来源于UNIX和类UNIX操作系统的**开发**。在UNIX的历史中，**两条开发主线**产生了**两个独立的系统**，一个是**System V**(直接起源于**AT&T的原始代码**)，另一个是**BSD**(Berkeley Software Distribution，在加州大学开发，现在市场上的NetBSD、FreeBSD、OpenBSD都是基于BSD的，还有基于BSD的商业系统，如BSDI和**MacOS X**)。
 
-Linux提供的系统调用汲取自所有上述3个来源，当然是独立实现的。其中没有使用竞争系统的代 码，这仅仅是因为法律和许可方面的问题。例如，下面列出的3个著名的系统调用起源于3个不同的阵 营。
+**Linux**提供的系统调用汲取自所有上述**3个来源**，当然是**独立实现**的。其中没有使用竞争系统的代码，这仅仅是因为法律和许可方面的问题。例如，下面列出的**3个著名的系统调用**起源于**3个不同的阵营**。
+
+- flock锁定一个文件，防止这个文件被几个进程并行访问，以确保文件的一致性。该调用是由 **POSIX标准**规定的。
+- **BSD** UNIX提供了**truncate**调用，用于按指定的字节数截短一个文件。Linux也以同样的名称实现了该函数。
+- **sysfs**收集内核已知的**文件系统有关的信息**，在**SVR4**(System V Release 4)中引入。 Linux 也采用了该系统调用。但Linux开发者并不全然同意System V设计者对该调用实际价值的观点， 至少，源代码的注释中写了“Whee.. Weird sysv syscall”。 现在，该信息可以通过读取/proc/filesystems更容易地获取。
