--- a/Linux/Learning/深入Linux内核架构/第13章 系统调用/1. 系统程序设计基础.md
+++ b/Linux/Learning/深入Linux内核架构/第13章 系统调用/1. 系统程序设计基础.md
@@ -79,3 +79,7 @@ Linux内核基本上与POSIX-1003.1标准兼容。很自然，标准的新发展
 - flock锁定一个文件，防止这个文件被几个进程并行访问，以确保文件的一致性。该调用是由 **POSIX标准**规定的。
 - **BSD** UNIX提供了**truncate**调用，用于按指定的字节数截短一个文件。Linux也以同样的名称实现了该函数。
 - **sysfs**收集内核已知的**文件系统有关的信息**，在**SVR4**(System V Release 4)中引入。 Linux 也采用了该系统调用。但Linux开发者并不全然同意System V设计者对该调用实际价值的观点， 至少，源代码的注释中写了“Whee.. Weird sysv syscall”。 现在，该信息可以通过读取/proc/filesystems更容易地获取。
+
+有些系统调用是**所有3个标准**都需要的。例如，time、gettimeofday、settimeofday在System V、 POSIX、4.3BSD中的形式是相同的，在Linux内核中也是如此。
+
+同样，有些系统调用是**特地为Linux开发**的，在其他标准/系统中或者根本不存在，或者名称不同。 一个例子是**vm86系统调用**，它是在IA-32处理器上实现DOS仿真程序的基础。更一般的调用，诸如用 于暂停进程执行很短一段时间的nanosleep，也是Linux特有的系统调用。
