--- a/Linux/Learning/深入Linux内核架构/第13章 系统调用/1. 系统程序设计基础.md
+++ b/Linux/Learning/深入Linux内核架构/第13章 系统调用/1. 系统程序设计基础.md
@@ -68,7 +68,7 @@ log.txt的内容比读者的预期可能要多很多:
 
 同样重要的是可用例程的多样性和选择权，这使得(应用程序和标准库)程序员的生活更加轻松，并促进了程序在各种不同UNIX变体之间在源代码级别上的可移植性。在UNIX超过25年的历史中，这促进 了标准和事实标准的出现，从而使得**不同系统的接口**具有一致性。
 
-POSIX标准(这是Portable Operating System Interface for UNIX的首字母缩写词，也揭示了该标准 的目的)已经成为该领域的主导标准。Linux和C标准库尽力遵循POSIX标准，这也是为什么值得对 POSIX标准进行简要讨论的原因。从20世纪80年代末POSIX第一个版本发布以来，该标准涵盖的范围 急速扩展(当前版本包括4卷1)，现在许多程序员认为它已经太长也太复杂。
+POSIX标准(这是Portable Operating System Interface for UNIX的首字母缩写词，也揭示了该标准 的目的)已经成为该领域的主导标准。Linux和C标准库尽力遵循POSIX标准，这也是为什么值得对 POSIX标准进行简要讨论的原因。从20世纪80年代末POSIX第一个版本发布以来，该标准涵盖的范围急速扩展(当前版本包括4卷)，现在许多程序员认为它已经太长也太复杂。
 
 Linux内核基本上与POSIX-1003.1标准兼容。很自然，标准的新发展需要一定的时间才能渗透到 内核代码中。
 
@@ -82,4 +82,8 @@ Linux内核基本上与POSIX-1003.1标准兼容。很自然，标准的新发展
 
 有些系统调用是**所有3个标准**都需要的。例如，time、gettimeofday、settimeofday在System V、 POSIX、4.3BSD中的形式是相同的，在Linux内核中也是如此。
 
-同样，有些系统调用是**特地为Linux开发**的，在其他标准/系统中或者根本不存在，或者名称不同。 一个例子是**vm86系统调用**，它是在IA-32处理器上实现DOS仿真程序的基础。更一般的调用，诸如用 于暂停进程执行很短一段时间的nanosleep，也是Linux特有的系统调用。
+同样，有些系统调用是**特地为Linux开发**的，在其他标准/系统中或者根本不存在，或者名称不同。 一个例子是**vm86系统调用**，它是在IA-32处理器上实现DOS仿真程序的基础。更一般的调用，诸如用于暂停进程执行很短一段时间的nanosleep，也是**Linux特有**的系统调用。
+
+有些情况下，**两个系统调用**是解决**同一问题**的**不同方法**。主要的例子是poll和select系统调用， 前一个在System V中引入，后者在4.3BSD中引入。最终，二者执行的功能是相同的。
+
+总之，只实现POSIX标准并不能建立一个完整的UNIX系统，除了名称之外，这种做法一文不值。
