--- Auto-Git Commit ---

--- a/Linux/Learning/深入Linux内核架构/第13章 系统调用/1. 系统程序设计基础.md
+++ b/Linux/Learning/深入Linux内核架构/第13章 系统调用/1. 系统程序设计基础.md
@@ -70,6 +70,8 @@ log.txt的内容比读者的预期可能要多很多:
 
 POSIX标准(这是Portable Operating System Interface for UNIX的首字母缩写词，也揭示了该标准 的目的)已经成为该领域的主导标准。Linux和C标准库尽力遵循POSIX标准，这也是为什么值得对 POSIX标准进行简要讨论的原因。从20世纪80年代末POSIX第一个版本发布以来，该标准涵盖的范围急速扩展(当前版本包括4卷)，现在许多程序员认为它已经太长也太复杂。
 
+注: 电子版可以在 www.opengroup.org/onlinepubs/007904975/ 查看.
+
 Linux内核基本上与POSIX-1003.1标准兼容。很自然，标准的新发展需要一定的时间才能渗透到 内核代码中。
 
 除了POSIX之外，还有**其他标准**，这些**不是**由**某个委员会**制定的，而是来源于UNIX和类UNIX操作系统的**开发**。在UNIX的历史中，**两条开发主线**产生了**两个独立的系统**，一个是**System V**(直接起源于**AT&T的原始代码**)，另一个是**BSD**(Berkeley Software Distribution，在加州大学开发，现在市场上的NetBSD、FreeBSD、OpenBSD都是基于BSD的，还有基于BSD的商业系统，如BSDI和**MacOS X**)。
@@ -87,3 +89,9 @@ Linux内核基本上与POSIX-1003.1标准兼容。很自然，标准的新发展
 有些情况下，**两个系统调用**是解决**同一问题**的**不同方法**。主要的例子是poll和select系统调用， 前一个在System V中引入，后者在4.3BSD中引入。最终，二者执行的功能是相同的。
 
 总之，只实现POSIX标准并不能建立一个完整的UNIX系统，除了名称之外，这种做法一文不值。
+
+POSIX无非是一组接口的集合，其具体实现并不是强制性的，也不一定要归入到内核来实现。因而， 虽然有些操作系统本身的设计是非UNIX的，但它们却以普通的函数库完全实现了POSIX标准，以促 进UNIX应用程序的移植。
+
+注: 新的Windows版本就包含了一个这种类型的库
+
+# 
