--- Auto-Git Commit ---

--- a/Linux/Learning/深入Linux内核架构/第13章 系统调用/1. 系统程序设计基础.md
+++ b/Linux/Learning/深入Linux内核架构/第13章 系统调用/1. 系统程序设计基础.md
@@ -96,3 +96,7 @@ POSIX无非是一组接口的集合，其具体实现并不是强制性的，也
 
 # 重启系统调用
 
+在**系统调用**与**信号冲突**时，会发生一个有趣的问题。
+
+如果在**一个进程执行系统调用**时，向该进程发送**一个信号**，那么在处理时，二者的优先级如何分配呢?应该等到系统调用结束再处理信号，还是 中断系统调用，以便尽快将信号投递到该进程?第一种方案导致的问题显然比较少，也是比较简单的 方案。遗憾的是，只有在所有系统调用都能够快速结束、不会让进程等待太长时间的情况下，这个方 案才能正确运作(在第5章提到过，信号投递的时机，总是在进程处理完一个系统调用、返回到用户 态的时候)。情况不总是这样。系统调用不仅需要一定的执行时间，而且在最坏情况下，很可能使进 程睡眠(例如，没有数据可供读取时)。对同时发生的信号而言，这意味着信号投递的严重延迟。因 而，必须不惜任何代价防止这种情况。
+
