--- Auto-Git Commit ---

--- a/Linux/Learning/深入Linux内核架构/第13章 系统调用/1. 系统程序设计基础.md
+++ b/Linux/Learning/深入Linux内核架构/第13章 系统调用/1. 系统程序设计基础.md
@@ -103,3 +103,10 @@ POSIX无非是一组接口的集合，其具体实现并不是强制性的，也
 应该等到**系统调用结束再处理信号**，还是中断系统调用，以便**尽快将信号**投递到该进程?第一种方案导致的问题显然比较少，也是比较简单的方案。遗憾的是，**只有**在**所有系统调用**都**能够快速结束**、不会让**进程等待太长时间**的情况下，这个方案才能正确运作(在第5章提到过，**信号投递的时机**，总是在**进程处理完一个系统调用**、**返回到用户态**的时候)。情况不总是这样。**系统调用**不仅需要一定的执行时间，而且在最坏情况下，很**可能使进程睡眠**(例如，没有数据可供读取时)。对同时**发生的信号**而言，这意味着**信号投递的严重延迟**。因而，必须不惜任何代价防止这种情况。
 
 如果一个**正在执行的系统调用**被**中断**，**内核**应该向应用程序**返回什么样的值**? 在通常的场景下，只有**两种情况**: **调用成功**或者**失败**。在**出错的情况**下，将返回一个**错误码**，使用户进程能够确定错误的原因，并适当地做出反应。倘若**系统调用被中断**，则发生了**第三种情况**: **必须通知应用程序**，如果系统调用在执行期间没有被信号中断，那么系统调用已经成功结束。在这种情况下，Linux(和其他 System V变体)下将使用-EINTR常数。
+
+该过程的负面效应是很明显的。尽管该方案易于实现，但它迫使**用户空间应用程序**的程序员必须明确**检查所有系统调用的返回值**，并在返回值为`-EINTR`的情况下，**重新启动**被中断的**系统调用**，直至该调用不再被信号中断。用**这种方法重启的系统调用**称作**可重启系统调用(restartable system call**)， 该技术则称为重启(restarting)。
+
+该行为第一次引入是在**System V UNIX**中。该方案将新信号的快速投递和系统调用的中断组合起 来，但它并非是唯一的组合方式，BSD所采用的方法即可证实这一点。我们来考察BSD内核在系统调 用被信号中断时，会做出何种反应。
+
+BSD内核将中断系统调用的执行并切换到用户态执行信号处理程序。在发生这种情况时，该系统 调用不会有返回值，内核在信号处理程序结束后将自动重启该调用。因为该行为对用户应用程序是透 明的，也不再需要重复实现对-EINTR返回值的检查和调用的重启，所以与System V方法相比，这种方 案更受程序员的欢迎。
+
