--- Auto-Git Commit ---

--- a/Linux/Learning/深入Linux内核架构/第13章 系统调用/1. 系统程序设计基础.md
+++ b/Linux/Learning/深入Linux内核架构/第13章 系统调用/1. 系统程序设计基础.md
@@ -106,7 +106,9 @@ POSIX无非是一组接口的集合，其具体实现并不是强制性的，也
 
 该过程的负面效应是很明显的。尽管该方案易于实现，但它迫使**用户空间应用程序**的程序员必须明确**检查所有系统调用的返回值**，并在返回值为`-EINTR`的情况下，**重新启动**被中断的**系统调用**，直至该调用不再被信号中断。用**这种方法重启的系统调用**称作**可重启系统调用(restartable system call**)， 该技术则称为重启(restarting)。
 
-该行为第一次引入是在**System V UNIX**中。该方案将新信号的快速投递和系统调用的中断组合起来，但它并非是唯一的组合方式，BSD所采用的方法即可证实这一点。我们来考察BSD内核在系统调 用被信号中断时，会做出何种反应。
+该行为第一次引入是在**System V UNIX**中。该方案将新信号的快速投递和系统调用的中断组合起来，但它并非是唯一的组合方式，BSD所采用的方法即可证实这一点。
 
-BSD内核将中断系统调用的执行并切换到用户态执行信号处理程序。在发生这种情况时，该系统 调用不会有返回值，内核在信号处理程序结束后将自动重启该调用。因为该行为对用户应用程序是透 明的，也不再需要重复实现对-EINTR返回值的检查和调用的重启，所以与System V方法相比，这种方 案更受程序员的欢迎。
+我们来考察**BSD内核**在系统调用被信号中断时，会做出何种反应。
+
+BSD内核将**中断系统调用的执行**并**切换到用户态**执行信号处理程序。在发生这种情况时，该系统 调用不会有返回值，内核在信号处理程序结束后将自动重启该调用。因为该行为对用户应用程序是透 明的，也不再需要重复实现对-EINTR返回值的检查和调用的重启，所以与System V方法相比，这种方 案更受程序员的欢迎。
 
