--- Auto-Git Commit ---

--- a/Linux/Learning/深入Linux内核架构/第13章 系统调用/1. 系统程序设计基础.md
+++ b/Linux/Learning/深入Linux内核架构/第13章 系统调用/1. 系统程序设计基础.md
@@ -112,4 +112,4 @@ POSIX无非是一组接口的集合，其具体实现并不是强制性的，也
 
 BSD内核将**中断系统调用的执行**并**切换到用户态**执行**信号处理程序**。在发生这种情况时，该**系统调用不会有返回值**，**内核**在信号处理程序结束后将**自动重启该调用**。因为该行为对用户应用程序是透明的，也不再需要重复实现对-EINTR返回值的检查和调用的重启，所以与System V方法相比，这种方案**更受程序员的欢迎**。
 
-Linux通过`SA_RESTART`**标志**支持BSD方案，可以在安装信号处理例程时按需对具体信号指定该标 志。System V提议的机制用作默认方案，因为BSD机制偶尔会导致一些困难，如下列例子所示(取自 [ME02]第229页)。
+Linux通过`SA_RESTART`**标志**支持BSD方案，可以在**安装信号处理例程**时按需对具体信号指定该标志。**System V**提议的机制用作**默认方案**，因为BSD机制偶尔会导致一些困难，如下列例子所示(取自 \[ME02]第229页)。
