--- a/Linux/Learning/深入Linux内核架构/第13章 系统调用/3. 系统调用的实现.md
+++ b/Linux/Learning/深入Linux内核架构/第13章 系统调用/3. 系统调用的实现.md
@@ -1,2 +1,7 @@
 
 在系统调用的实现中，不仅需要讨论提供所需函数的**内核源代码**，还需要阐述**调用这些函数的方式**。这些函数的调用方式**与普通的C函数不同**，因为需要跨越用户态和核心态的边界。这引发了各种问题，这些问题需要由平台相关的汇编语言代码处理。该代码尽可能快速地建立了一个独立于处理器的状态，使得系统调用的实现能够独立于底层体系结构。参数如何在用户空间和内核空间之间传递的 问题也必须考虑。
+
+# 系统调用的结构
+
+用于实现系统调用的内核代码划分为两个颇为不同的部分。系统调用执行的实际任务实现为一个 C例程，与其余内核代码几乎没有差别。用于调用该例程的机制则充满了平台相关的特性，必须考虑 大量细节，因而最终实现使用汇编语言代码是必然的。
+
