--- a/Linux/Learning/深入Linux内核架构/第13章 系统调用/3. 系统调用的实现.md
+++ b/Linux/Learning/深入Linux内核架构/第13章 系统调用/3. 系统调用的实现.md
@@ -3,8 +3,25 @@
 
 # 系统调用的结构
 
-用于实现系统调用的**内核代码**划分为**两个颇为不同的部分**。系统调用执行的实际任务实现为一个C例程，与其余内核代码几乎没有差别。用于调用该例程的机制则充满了平台相关的特性，必须考虑大量细节，因而最终实现使用汇编语言代码是必然的。
+用于实现系统调用的**内核代码**划分为**两个颇为不同的部分**。
+
+**系统调用**执行的**实际任务**实现为一个**C例程**，与其余内核代码几乎没有差别。
+
+用于**调用该例程的机制**则充满了**平台相关**的特性，必须考虑大量细节，因而最终实现使用**汇编语言**代码是必然的。
 
 ## 处理程序函数的实现
 
-我们首先仔细观察一下，在实际处理程序函数的C语言实现之后有哪些东西。这些函数散布在内 核中各处，因为这些函数都嵌入到了与其目的关系最密切的代码中。例如，所有文件相关的系统调用 都在fs/内核子目录下，因为它们与虚拟文件系统直接交互。同样地，所有的内存管理调用都在mm/ 子目录的文件中。
+我们首先仔细观察一下，在实际处理程序函数的C语言实现之后有哪些东西。这些函数散布在内核中各处，因为这些函数都嵌入到了与其目的关系最密切的代码中。例如，所有文件相关的系统调用 都在fs/内核子目录下，因为它们与虚拟文件系统直接交互。同样地，所有的内存管理调用都在mm/子目录的文件中。
+
+用于**实现系统调用**的**处理程序函数**，在形式上有如下几个共同的特性。
+
+- 每个函数的**名称前缀**都是`sys_`，将该函数唯一地标识为一个系统调用，更精确地说，标识为
+一个系统调用的处理程序函数。通常，不必区分系统调用和处理程序函数。在以下各节中，
+仅当有必要之处才进行区分。
+ 所有的处理程序函数都最多接受5个参数。这些参数在参数列表中指定，与普通的C函数相同
+(提供参数值的方式与传统方法稍有不同，读者稍后会看到)。
+ 所有的系统调用都在核心态执行。因而，第2章讨论的限制是适用的，主要是不允许直接访问
+用户态的内存。回想copy_from_user、copy_to_user或其他同类函数，都必须确保在进行实
+际读写操作之前目标内存区对内核必须是可用的。 在内核将控制权转移给处理程序例程后，控制流就进入了平台中立的代码，即不依赖于特定的
+CPU或体系结构。但因为各种原因，也有一些例外。有少量处理程序函数是针对各个平台分别实现的。 在返回结果时，处理程序函数无须进行特别的操作，简单的一个return后接返回值即可。在核心态和 用户态之间的切换，由特定于平台的内核代码执行，这与中断处理程序是无关的。图13-1说明了相关 的时间顺序。
+ 
