--- Auto-Git Commit ---

--- a/Linux/Learning/深入Linux内核架构/第13章 系统调用/3. 系统调用的实现.md
+++ b/Linux/Learning/深入Linux内核架构/第13章 系统调用/3. 系统调用的实现.md
@@ -15,13 +15,9 @@
 
 用于**实现系统调用**的**处理程序函数**，在形式上有如下几个共同的特性。
 
-- 每个函数的**名称前缀**都是`sys_`，将该函数唯一地标识为一个系统调用，更精确地说，标识为
-一个系统调用的处理程序函数。通常，不必区分系统调用和处理程序函数。在以下各节中，
-仅当有必要之处才进行区分。
- 所有的处理程序函数都最多接受5个参数。这些参数在参数列表中指定，与普通的C函数相同
-(提供参数值的方式与传统方法稍有不同，读者稍后会看到)。
- 所有的系统调用都在核心态执行。因而，第2章讨论的限制是适用的，主要是不允许直接访问
-用户态的内存。回想copy_from_user、copy_to_user或其他同类函数，都必须确保在进行实
-际读写操作之前目标内存区对内核必须是可用的。 在内核将控制权转移给处理程序例程后，控制流就进入了平台中立的代码，即不依赖于特定的
-CPU或体系结构。但因为各种原因，也有一些例外。有少量处理程序函数是针对各个平台分别实现的。 在返回结果时，处理程序函数无须进行特别的操作，简单的一个return后接返回值即可。在核心态和 用户态之间的切换，由特定于平台的内核代码执行，这与中断处理程序是无关的。图13-1说明了相关 的时间顺序。
+- 每个函数的**名称前缀**都是`sys_`，将该函数唯一地标识为**一个系统调用**，更精确地说，标识为一个**系统调用**的**处理程序函数**。通常，**不必区分**系统调用和处理程序函数。在以下各节中，仅当有必要之处才进行区分。
+- 所有的处理程序函数都**最多接受5个参数**。这些参数在参数列表中指定，与普通的C函数相同(提供参数值的方式与传统方法稍有不同，读者稍后会看到)。
+- 所有的系统调用都在核心态执行。因而，第2章讨论的限制是适用的，主要是不允许直接访问用户态的内存。回想`copy_from_user`、`copy_to_user`或其他同类函数，都必须确保在进行实际读写操作之前目标内存区对内核必须是可用的。 
+
+在内核将控制权转移给处理程序例程后，控制流就进入了平台中立的代码，即不依赖于特定的CPU或体系结构。但因为各种原因，也有一些例外。有少量处理程序函数是针对各个平台分别实现的。 在返回结果时，处理程序函数无须进行特别的操作，简单的一个return后接返回值即可。在核心态和 用户态之间的切换，由特定于平台的内核代码执行，这与中断处理程序是无关的。图13-1说明了相关 的时间顺序。
  
