--- Auto-Git Commit ---

--- a/Linux/Learning/深入Linux内核架构/第13章 系统调用/3. 系统调用的实现.md
+++ b/Linux/Learning/深入Linux内核架构/第13章 系统调用/3. 系统调用的实现.md
@@ -27,4 +27,17 @@
 
 上述方法极大简化了程序员的工作，因为**处理程序函数的实现**实际上与普通内核代码的实现是相同的。有些系统调用非常简单，只用一行C语言代码实现。例如，**返回当前进程UID**的getuid系统调 用实现如下:
 
+```cpp
+// kernel/timer.c
+asmlinkage long sys_getuid(void) 
+{ 
+        /* 我们只改变这个，使之变为SMP安全的 */ 
+        return current->uid; 
+}
 ```
+
+current是一个指针，指向当前进程的`task_struct`实例，由内核自动设置。上述代码返回`task_struct`的**uid成员**(当前用户ID)。
+
+还有复杂得多的系统调用，其中一些已经在前面几章讨论过。处理程序函数的实现总是简短而紧凑的。它通常会尽快将控制权传递给一个更通用的内核辅助函数，以read为例。
+
+第三种“类型”系统调用充当**多路分解器**。多路分解器使用常数，将系统调用委派给执行不同任 务的函数。一个典型的例子是socketcall(在第12章讨论)，其中聚集了所有网络相关的调用。
