--- Auto-Git Commit ---

--- a/Linux/Learning/深入Linux内核架构/第13章 系统调用/3. 系统调用的实现.md
+++ b/Linux/Learning/深入Linux内核架构/第13章 系统调用/3. 系统调用的实现.md
@@ -41,3 +41,16 @@ current是一个指针，指向当前进程的`task_struct`实例，由内核自
 还有复杂得多的系统调用，其中一些已经在前面几章讨论过。处理程序函数的实现总是简短而紧凑的。它通常会尽快将控制权传递给一个更通用的内核辅助函数，以read为例。
 
 第三种“类型”系统调用充当**多路分解器**。多路分解器使用**常数**，将**系统调用**委派给执行**不同任务的函数**。一个典型的例子是socketcall(在第12章讨论)，其中聚集了所有网络相关的调用。
+
+# 调用分派和参数传递
+
+系统调用由内核分配的一个编号唯一标识。这样做有其实际原因，在考虑触发系统调用的过程时， 该原因会逐渐明朗化。所有的系统调用都由一处中枢代码处理，根据调用编号和一个静态表，将调用 分派到具体的函数。传递的参数也由中枢代码处理，这样参数的传递独立于实际的系统调用。
+
+...
+
+## 参数传递
+
+不同的平台使用不同的汇编语言方法来执行系统调用。1 在所有平台上，系统调用参数都是通过 寄存器直接传递的，对具体的处理程序函数而言，参数与寄存器之间的映射是精确定义的。还需要一 个寄存器来定义系统调用编号，将系统调用分派给匹配的处理程序函数。
+
+下面概述了一些流行的体系结构上进行系统调用的方法。
+
