--- Auto-Git Commit ---

--- a/Linux/Learning/深入Linux内核架构/第13章 系统调用/3. 系统调用的实现.md
+++ b/Linux/Learning/深入Linux内核架构/第13章 系统调用/3. 系统调用的实现.md
@@ -54,7 +54,7 @@ current是一个指针，指向当前进程的`task_struct`实例，由内核自
 
 注: 细节很容易在GNU标准库的源代码中找到，可参考`sysdeps/unix/sysv/linux/arch/syscall.S`文件。**特定平台**所需的**汇编语言**代码可以在syscall标号下找到，这些代码为库其余部分提供了一个**通用接口**，可用于调用系统调用。
 
-在所有平台上，系统调用参数都是通过 寄存器直接传递的，对具体的处理程序函数而言，参数与寄存器之间的映射是精确定义的。还需要一 个寄存器来定义系统调用编号，将系统调用分派给匹配的处理程序函数。
+在**所有平台**上，系统调用**参数**都是通过**寄存器**直接传递的，对具体的处理程序函数而言，参数与寄存器之间的映射是精确定义的。还需要一 个寄存器来定义系统调用编号，将系统调用分派给匹配的处理程序函数。
 
 下面概述了一些流行的体系结构上进行系统调用的方法。
 
