--- a/Linux/Learning/深入Linux内核架构/第13章 系统调用/3. 系统调用的实现.md
+++ b/Linux/Learning/深入Linux内核架构/第13章 系统调用/3. 系统调用的实现.md
@@ -54,7 +54,13 @@ current是一个指针，指向当前进程的`task_struct`实例，由内核自
 
 注: 细节很容易在GNU标准库的源代码中找到，可参考`sysdeps/unix/sysv/linux/arch/syscall.S`文件。**特定平台**所需的**汇编语言**代码可以在syscall标号下找到，这些代码为库其余部分提供了一个**通用接口**，可用于调用系统调用。
 
-在**所有平台**上，系统调用**参数**都是通过**寄存器**直接传递的，对具体的处理程序函数而言，参数与寄存器之间的映射是精确定义的。还需要一 个寄存器来定义系统调用编号，将系统调用分派给匹配的处理程序函数。
+在**所有平台**上，系统调用**参数**都是通过**寄存器**直接传递的，对具体的**处理程序函数**而言，**参数**与**寄存器**之间的**映射是精确定义**的。还需要**一个寄存器**来定义系统调用**编号**，将系统调用分派给匹配的处理程序函数。
 
 下面概述了一些流行的体系结构上进行系统调用的方法。
 
+- 在**IA\-32**系统上，使用汇编语言指令`int $0x80`来引发软件中断128。这是一个**调用门(call gate**)，为此指派了**一个特定的函数**来继续进行系统调用的处理。系统**调用编号**通过**寄存器eax**传递， 而**参数**通过寄存器**ebx**、**ecx**、**edx**、**esi**和**edi**传递。
+
+注: 除了0x80调用门，内核在`IA-32`处理器上的实现提供了**其他两种**进入核心态执行系统调用的方法，分别是`lcall7` 和`lcall27`调用门。这些用于执行对BSD和Solaris的二进制仿真，因为这些系统分别以本机方式进行系统调用。
+
+在IA-32系列中，更为现代的处理器(Pentium II和后续处理器)采用了两个汇编语言指令
+(sysenter和sysexit)来快速进入和退出核心态。其中仍然采用同样的方法传递参数，但在 特权级别之间切换的速度更快。 为使sysenter调用更快，而又不失去与旧处理器的向下兼容性，内核将一个内存页面映射到 地址空间的顶端(0xffffe000)。根据处理机类型的不同，该页上的系统调用代码可能包含 int 0x80或者sysenter。 调用存储在该地址(0xffffe000)的代码使得标准库可以自动选择与使用的处理器相匹配的 方法。
