--- Auto-Git Commit ---

--- a/Architecture/x86/Learning/x86_64编程体系探索及编程/第2篇 处理器的工作模式/第10章 x86x64保护模式体系（上）/5. 段式管理的数据结构.md
+++ b/Architecture/x86/Learning/x86_64编程体系探索及编程/第2篇 处理器的工作模式/第10章 x86x64保护模式体系（上）/5. 段式管理的数据结构.md
@@ -2579,11 +2579,11 @@ syscall与sysret指令使用STAR寄存器进行设置，在Intel中称为IA32_ST
 
 ![config](./images/68.png)
 
-STAR寄存器的低32位对于Intel64机器来说是无效的，在调用时，syscall指令从STAR[47：32]获得CS selector，从STAR[47：32]+8获得SS selector。
+STAR寄存器的低32位对于Intel64机器来说是无效的，在调用时，syscall指令从`STAR[47：32]`获得CS selector，从`STAR[47：32]+8`获得SS selector。
 
-在返回64位模式时，sysret指令从STAR[63：48]+16得到CS selector，从STAR[63：48]+8得到SS selector。
+在返回64位模式时，sysret指令从`STAR[63：48]+16`得到CS selector，从`STAR[63：48]+8`得到SS selector。
 
-返回到compatibility模式时，sysret指令从STAR[63：48]得到CS selector，从STAR[63：48]+8得到SS selector。
+返回到compatibility模式时，sysret指令从`STAR[63：48]得到CS selector，从`STAR[63：48]+8`得到SS selector。
 
 注意：在AMD64上可以返回到compatibility模式，在Intel64上返回compatibility模式是无效的。
 
