--- a/Linux/Learning/深入Linux内核架构/第13章 系统调用/3. 系统调用的实现.md
+++ b/Linux/Learning/深入Linux内核架构/第13章 系统调用/3. 系统调用的实现.md
@@ -58,9 +58,26 @@ current是一个指针，指向当前进程的`task_struct`实例，由内核自
 
 下面概述了一些流行的体系结构上进行系统调用的方法。
 
-- 在**IA\-32**系统上，使用汇编语言指令`int $0x80`来引发软件中断128。这是一个**调用门(call gate**)，为此指派了**一个特定的函数**来继续进行系统调用的处理。系统**调用编号**通过**寄存器eax**传递， 而**参数**通过寄存器**ebx**、**ecx**、**edx**、**esi**和**edi**传递。
+### IA-32系统
 
-注: 除了0x80调用门，内核在`IA-32`处理器上的实现提供了**其他两种**进入核心态执行系统调用的方法，分别是`lcall7` 和`lcall27`调用门。这些用于执行对BSD和Solaris的二进制仿真，因为这些系统分别以本机方式进行系统调用。
+在**IA\-32**系统上，使用汇编语言指令`int $0x80`来引发软件中断128。这是一个**调用门(call gate**)，为此指派了**一个特定的函数**来继续进行系统调用的处理。系统**调用编号**通过**寄存器eax**传递， 而**参数**通过寄存器**ebx**、**ecx**、**edx**、**esi**和**edi**传递。
 
-在IA-32系列中，更为现代的处理器(Pentium II和后续处理器)采用了两个汇编语言指令
-(sysenter和sysexit)来快速进入和退出核心态。其中仍然采用同样的方法传递参数，但在 特权级别之间切换的速度更快。 为使sysenter调用更快，而又不失去与旧处理器的向下兼容性，内核将一个内存页面映射到 地址空间的顶端(0xffffe000)。根据处理机类型的不同，该页上的系统调用代码可能包含 int 0x80或者sysenter。 调用存储在该地址(0xffffe000)的代码使得标准库可以自动选择与使用的处理器相匹配的 方法。
+注: 除了0x80调用门，内核在`IA-32`处理器上的实现提供了**其他两种**进入核心态执行系统调用的方法，分别是`lcall7` 和`lcall27`调用门。这些用于执行对**BSD**和**Solaris**的**二进制仿真**，因为这些系统分别以本机方式进行系统调用。
+
+在`IA-32`系列中，更为现代的处理器(Pentium II和后续处理器)采用了**两个汇编语言指令**(**sysenter**和**sysexit**)来快速进入和退出核心态。其中仍然采用**同样的方法传递参数**，但在特权级别之间切换的**速度更快**。 
+
+为使sysenter调用更快，而又不失去与旧处理器的**向下兼容性**，内核将**一个内存页面**映射到**地址空间的顶端**(`0xffffe000`)。根据处理机类型的不同，该页上的系统调用代码可能包含 `int 0x80`或者`sysenter`。 
+
+**调用**存储在该地址(`0xffffe000`)的代码使得**标准库**可以**自动选择**与使用的处理器相匹配的方法。
+
+### Alpha处理器
+
+### PowerPC
+
+### AMD64
+
+AMD64体系结构在实现系统调用时，也提供了自身的汇编语言指令，其名称为**syscall**。系统调用**编号**保存在**rax寄存器**中，而**参数**保存在**rdi**、**rsi**、**rdx**、**r10**、**r8**和**r9**中。
+
+### 内核任务
+
+在应用程序借助于标准库切换到核心态后，内核面临的任务是查找与该系统调用匹配的处理程序 函数，并向该处理函数提供传递的参数。sys_call_table表中保存了一组指向处理程序例程的函数 13 指针，可用于查找处理程序(在所有平台上)。因为该表是用汇编语言指令在内核的数据段中产生的， 其内容因平台而不同。但原理总是同样的:内核根据系统调用编号找到表中适当的位置，由此获得指 向目标处理程序函数的指针。
