--- Auto-Git Commit ---

--- a/Linux/Learning/深入Linux内核架构/第13章 系统调用/3. 系统调用的实现.md
+++ b/Linux/Learning/深入Linux内核架构/第13章 系统调用/3. 系统调用的实现.md
@@ -80,4 +80,9 @@ AMD64体系结构在实现系统调用时，也提供了自身的汇编语言指
 
 ### 内核任务
 
-在应用程序借助于标准库切换到核心态后，内核面临的任务是查找与该系统调用匹配的处理程序 函数，并向该处理函数提供传递的参数。sys_call_table表中保存了一组指向处理程序例程的函数 13 指针，可用于查找处理程序(在所有平台上)。因为该表是用汇编语言指令在内核的数据段中产生的， 其内容因平台而不同。但原理总是同样的:内核根据系统调用编号找到表中适当的位置，由此获得指 向目标处理程序函数的指针。
+在应用程序借助于标准库切换到**核心态**后，内核面临的任务是查找与该系统调用匹配的处理程序函数，并向该处理函数提供传递的参数。
+
+`sys_call_table`表中保存了一组指向处理程序例程的函数指针，可用于查找处理程序(在**所有平台**上)。因为该表是用**汇编语言指令**在内核的**数据段中产生**的，其内容**因平台而不同**。但原理总是同样的: 内核根据**系统调用编号**找到表中**适当的位置**，由此获得指向**目标处理程序函数的指针**。
+
+## 系统调用表
+
