--- Auto-Git Commit ---

--- a/Linux/Learning/深入Linux内核架构/第13章 系统调用/3. 系统调用的实现.md
+++ b/Linux/Learning/深入Linux内核架构/第13章 系统调用/3. 系统调用的实现.md
@@ -86,3 +86,34 @@ AMD64体系结构在实现系统调用时，也提供了自身的汇编语言指
 
 ## 系统调用表
 
+### Sparch64
+
+Sparc64系统上的sys_call_table，定义在arch/sparc/kernel/systlbs.S中(其他系统的系统调用表，通常可以在与处理器类型对应的目录下的entry.S文件中找到)。
+
+### IA-32
+
+```assembly
+" arch/x86/kernel/syscall_table_32.S
+ENTRY(sys_call_table)
+        .long    sys_restart_syscall /* 0 - old "setup()" system call, used for restarting */
+        .long    sys_exit
+        .long    sys_fork
+        .long sys_read
+        .long sys_write
+        .long sys_open /* 5 */
+        .long sys_close
+...
+        .long sys_utimensat /* 320 */
+        .long sys_signalfd
+        .long sys_timerfd
+        .long sys_eventfd
+        .long sys_fallocate
+```
+
+`.long`语句的作用是在**内存中对齐各个表项**。 
+
+用这种方法定义的表，与C数组类似，也可以用指针运算处理。sys_call_table是基指针，指向
+数组的起始处，即(按C语言的术语)指向索引为0的数组项。如果一个用户空间程序调用open系统调 用，传递的系统调用编号是5。分配器例程将编号5加到sys_call_table的基地址，得到该数组的第6 项，其中保存了sys_open的地址，这是独立于处理器的处理程序函数。在将保存在寄存器中的参数值 复制到栈上之后，内核调用处理程序例程，并切换到系统调用处理中独立于处理器的部分。
+
+# 返回用户态
+
