--- Auto-Git Commit ---

--- a/Linux/Learning/深入Linux内核架构/第13章 系统调用/3. 系统调用的实现.md
+++ b/Linux/Learning/深入Linux内核架构/第13章 系统调用/3. 系统调用的实现.md
@@ -114,7 +114,23 @@ ENTRY(sys_call_table)
 
 用这种方法定义的表，与**C数组类似**，也可以用**指针运算处理**。`sys_call_table`是**基指针**，指向**数组的起始处**，即(按C语言的术语)指向**索引为0**的**数组项**。
 
-如果一个用户空间程序调用**open系统调用**，传递的系统调用**编号是5**。分配器例程将编号5加到sys_call_table的基地址，得到该数组的第6 项，其中保存了sys_open的地址，这是独立于处理器的处理程序函数。在将保存在寄存器中的参数值 复制到栈上之后，内核调用处理程序例程，并切换到系统调用处理中独立于处理器的部分。
+如果一个用户空间程序调用**open系统调用**，传递的系统调用**编号是5**。**分配器例程**将**编号5**加到`sys_call_table`的基地址，得到该数组的**第6 项**，其中保存了`sys_open`的地址，这是独立于处理器的处理程序函数。在将保存在**寄存器**中的**参数**值复制到**栈上**之后，内核调用处理程序例程，并切换到系统调用处理中独立于处理器的部分。
 
-# 返回用户态
+>因为核心态和用户态使用两个不同的栈，如第3章所述，系统调用参数不能像通常那样在栈上传递。在两个栈之间的切换，或者由进入核心态时调用的体系结构相关的汇编语言代码进行，或者在特权级别从用户态切换到核心态时由处理器自动进行。
 
+## 返回用户态
+
+# 访问用户空间
+
+尽管内核尽可能保持**内核空间和用户空间的独立**，有些情况下，**内核**代码必须访问**用户应用程序**的**虚拟内存**。当然，这**只**在内核执行由用户应用程序发起的**同步操作**时才有意义，而不适用于任意进程进行的读或写访问，否则不仅不能解决问题，还会导致当前执行的代码产生危险的后果。
+
+当然，对系统调用的处理就是此类情况的一个典型的例子，内核忙于同步执行应用程序指派的任务。因为如下两种原因，**内核必须访问应用程序的地址空间**。
+
+- 如果一个系统调用需要**超过6个不同的参数**，它们只能借助进程内存空间中的C结构实例来传递。系统调用将借助寄存器，将**指向该结构实例**的一个**指针**传递给内核。
+- 由系统调用的副效应产生的**大量数据**，不能通过**返回值机制**传递给**用户进程**。相反，必须通过**指定的内存区**交换该数据。当然，该内存区**必须在用户空间**中，使得用户应用程序能够访问。
+
+在**内核**访问**自身的内存区**时，**虚拟地址**和**物理内存页**之间的**映射**总是**存在！！！**的。但**用户空间**中的情况有所不同，如第3章所述。这里，**页可能被换出**，甚至可能**尚未分配物理内存页**。
+因而，内核不能简单地反引用用户空间的指针，而必须采用特定的函数，确保目标内存区已经在
+物理内存中。为确保内核遵守了这种约定，用户空间指针通过__user属性标记，以支持C check tools 1
+对源代码的自动化检查 。 第3章讨论了用于在用户空间和内核空间之间复制数据的函数。大多数情况下，是copy_to_user
+和copy_from_user，但还有更多的变体可用。
