--- Auto-Git Commit ---

--- a/Linux/Learning/深入Linux内核架构/第13章 系统调用/3. 系统调用的实现.md
+++ b/Linux/Learning/深入Linux内核架构/第13章 系统调用/3. 系统调用的实现.md
@@ -129,8 +129,13 @@ ENTRY(sys_call_table)
 - 如果一个系统调用需要**超过6个不同的参数**，它们只能借助进程内存空间中的C结构实例来传递。系统调用将借助寄存器，将**指向该结构实例**的一个**指针**传递给内核。
 - 由系统调用的副效应产生的**大量数据**，不能通过**返回值机制**传递给**用户进程**。相反，必须通过**指定的内存区**交换该数据。当然，该内存区**必须在用户空间**中，使得用户应用程序能够访问。
 
-在**内核**访问**自身的内存区**时，**虚拟地址**和**物理内存页**之间的**映射**总是**存在！！！**的。但**用户空间**中的情况有所不同，如第3章所述。这里，**页可能被换出**，甚至可能**尚未分配物理内存页**。
-因而，内核不能简单地反引用用户空间的指针，而必须采用特定的函数，确保目标内存区已经在
-物理内存中。为确保内核遵守了这种约定，用户空间指针通过__user属性标记，以支持C check tools 1
-对源代码的自动化检查 。 第3章讨论了用于在用户空间和内核空间之间复制数据的函数。大多数情况下，是copy_to_user
-和copy_from_user，但还有更多的变体可用。
+在**内核**访问**自身的内存区！！！** 时，**虚拟地址**和**物理内存页**之间的**映射**总是**存在！！！**的。但**用户空间**中的情况有所不同，如第3章所述。这里，**页可能被换出**，甚至可能**尚未分配物理内存页**。
+
+因而，内核**不能**简单地**反引用用户空间的指针**，而必须采用**特定的函数**，确保**目标内存区**已经在**物理内存**中。为确保内核遵守了这种约定，**用户空间指针**通过`__user`属性标记，以支持C check tools对源代码的自动化检查 。 
+
+注: Linus Torvalds设计了该工具，用于发现内核源代码中直接反引用用户空间指针之处。
+
+第3章讨论了用于在用户空间和内核空间之间复制数据的函数。大多数情况下，是`copy_to_user`和`copy_from_user`，但还有更多的变体可用。
+
+# 追踪系统调用
+
