--- Auto-Git Commit ---

--- a/Linux/Learning/深入Linux内核架构/第13章 系统调用/1. 系统程序设计基础.md
+++ b/Linux/Learning/深入Linux内核架构/第13章 系统调用/1. 系统程序设计基础.md
@@ -58,7 +58,7 @@ log.txt的内容比读者的预期可能要多很多:
 
 ...
 
-使用strace工具还有一个好处，无须接触所跟踪应用程序的源代码即可了解其内部结构和运作方式。
+使用strace工具还有一个好处，**无须接触**所跟踪**应用程序的源代码**即可了解其内部结构和运作方式。
 
 ...
 
