--- a/Linux/Learning/深入Linux内核架构/第13章 系统调用/3. 系统调用的实现.md
+++ b/Linux/Learning/深入Linux内核架构/第13章 系统调用/3. 系统调用的实现.md
@@ -143,6 +143,6 @@ ENTRY(sys_call_table)
 
 `sys_ptrace`**处理程序例程**的实现是**体系结构相关**的，定义在`arch/arch/kernel/ptrace.c`中。 各个体系结构的对应版本之间，代码只有微小的差别。
 
-在详细考察该系统调用的流程之前，应该注意到**ptrace**本质上是一个用于读取和修改进程地址空间中的值的工具，不能用于直接跟踪系统调用。只有从正确的位置提取出所需的信息，才能跟踪进 程并就进行的系统调用得出结论。即使调试器如gdb的实现也完全依赖于ptrace。ptrace不仅能用于 跟踪系统调用，还提供了更多的选项。
+在详细考察该系统调用的流程之前，应该注意到**ptrace**本质上是一个用于**读取和修改进程地址空间中的值的工具**，**不能！！！** 用于直**接跟踪系统调用**。只有从正确的位置提取出所需的信息，才能跟踪进程并就进行的系统调用得出结论。即使调试器如gdb的实现也完全依赖于ptrace。ptrace不仅能用于 跟踪系统调用，还提供了更多的选项。
 
 ptrace在内核源代码中的定义需要4个参数2:
