--- Auto-Git Commit ---

--- a/Linux/Learning/深入Linux内核架构/第13章 系统调用/3. 系统调用的实现.md
+++ b/Linux/Learning/深入Linux内核架构/第13章 系统调用/3. 系统调用的实现.md
@@ -143,6 +143,29 @@ ENTRY(sys_call_table)
 
 `sys_ptrace`**处理程序例程**的实现是**体系结构相关**的，定义在`arch/arch/kernel/ptrace.c`中。 各个体系结构的对应版本之间，代码只有微小的差别。
 
-在详细考察该系统调用的流程之前，应该注意到**ptrace**本质上是一个用于**读取和修改进程地址空间中的值的工具**，**不能！！！** 用于直**接跟踪系统调用**。只有从正确的位置提取出所需的信息，才能跟踪进程并就进行的系统调用得出结论。即使调试器如gdb的实现也完全依赖于ptrace。ptrace不仅能用于 跟踪系统调用，还提供了更多的选项。
+在详细考察该系统调用的流程之前，应该注意到**ptrace**本质上是一个用于**读取和修改进程地址空间中的值的工具**，**不能！！！** 用于**直接跟踪系统调用**。只有从正确的位置提取出所需的信息，才能跟踪进程并就进行的系统调用得出结论。即使**调试器如gdb**的实现也完全**依赖于ptrace**。
 
-ptrace在内核源代码中的定义需要4个参数2:
+ptrace不仅能用于跟踪系统调用，还提供了更多的选项。
+
+ptrace在内核源代码中的定义需要4个参数:
+
+```cpp
+// <syscalls.h>
+asmlinkage long sys_ptrace(long request, long pid, long addr, long data);
+```
+
+注: `<syscalls.h>`包含了所有**独立于体系结构**的**系统调用的原型**，这些调用的参数在所有体系结构上都是相同的。
+
+- pid标识了**目标进程**。进程标识符根据调用者的命名空间来解释。尽管**strace**的处理方式暗示**必须从开始就启用进程追踪**，但这**不是真实的**。跟踪者程序必须通过ptrace将自身连接到目标进程，而且这可以在进程已经运行后进行(不仅能在进程开始时进行)。 strace负责连接到进程，通常是用fork和exec启动目标程序后立即进行。
+- addr和data向内核传递一个内存地址和附加信息。其语义因选择的操作而不同。
+- 借助于符号常数，request用于选择一个操作，由ptrace执行。手册页ptrace(2)、内核源代码中的`<ptrace.h>`列出了所有可能值。可用的选项如下。
+    - PTRACE_ATTACH发出一个请求，连接到一个进程并开始跟踪。PTRACE_DETACH从该进程断开
+并结束跟踪。当被跟踪的进程有待决信号时，进程总是会被终止。该选项使得被跟踪进程 在系统调用后或一条汇编语言指令之后暂停。 在被跟踪的进程暂停时，跟踪者程序通过SIGCHLD信号得到一个通知:在被跟踪进程暂停前， 13 跟踪者可用第2章讨论的wait函数等待。 在设置了跟踪之后，将SIGSTOP信号发送给被跟踪进程，这导致跟踪者进程第一次被中断。 在跟踪系统调用时，这是必要的，如下面的例子所示。
+ PEEKTEXT、PEEKDATA和PEEKUSR从进程地址空间读取数据。PEEKUSR读取普通的CPU寄存 器和使用的任何其他调试寄存器1(当然，会根据标识符只读取一个寄存器的内容，而不是 读取整个寄存器集合的内容)。PEEKEXT和PEEKDATA从进程的代码段和数据段读取任意字。
+ POKETEXT、POKEDATA和PEEKUSR向被监控进程的三个指定区域写入值，因而可以操作进程 地址空间的内容。这在交互式调试程序时是非常重要的。 因为PTRACE_POKEUSR操作CPU的调试寄存器，该选项支持对高级调试技术的使用。例如可 监控此类事件:在一定的条件满足时，在特定位置暂停程序的执行。
+ PTRACE_SETREGS和PTRACE_GETREGS设置和读取CPU的特权寄存器集合的值。
+ PTRACE_SETFPREGS和PTRACE_GETFPREGS设置和读取用于浮点计算的寄存器。这些操作在
+测试和交互式调试应用程序时也非常有用。
+ 系统调用追踪是基于PTRACE_SYSCALL的。如果用该选项激活ptrace，那么内核将开始执行
+进程，直至调用一个系统调用。在被追踪进程停止后，wait通知跟踪者进程，跟踪者接下 来可以使用上述的ptrace选项，来分析被跟踪进程的地址空间，以收集有关系统调用的信息。 在完成系统调用之后，被跟踪的进程第二次暂停，使得跟踪者进程可以检查调用是否成功。 因为系统调用机制因平台而不同，跟踪程序如strace必须针对每个体系结构分别实现数据 的读取;这是一个乏味的任务，很快会致使可移植程序的源代码变得不可读(strace的源 代码中有大量预处理器条件，阅读其代码非常痛苦)。
+ PTRACE_SINGLESTEP将处理器在执行被追踪进程期间，置于单步执行模式。在这种模式下， 跟踪者进程在每个汇编语言指令之后，可以访问被跟踪进程。这仍然是一种非常流行的应 用程序调试技术，特别是在试图跟踪编译器错误或其他比较微秒的问题时。 单步功能的实现非常强烈地依赖于所使用的CPU，毕竟，内核此时是在一个面向机器的层 8 次上运作的。尽管如此，在所有平台上都可以向跟踪者进程提供一个一致的接口。在汇编 指令执行之后，向跟踪者发送一个SIGCHLD信号，跟踪者接下来会使用其他的ptrace选项，
