--- Auto-Git Commit ---

--- a/Linux/Learning/深入Linux内核架构/第13章 系统调用/3. 系统调用的实现.md
+++ b/Linux/Learning/深入Linux内核架构/第13章 系统调用/3. 系统调用的实现.md
@@ -156,7 +156,7 @@ asmlinkage long sys_ptrace(long request, long pid, long addr, long data);
 
 注: `<syscalls.h>`包含了所有**独立于体系结构**的**系统调用的原型**，这些调用的参数在所有体系结构上都是相同的。
 
-- pid标识了**目标进程**。进程标识符根据调用者的命名空间来解释。尽管**strace**的处理方式暗示**必须从开始就启用进程追踪**，但这**不是真实的**。跟踪者程序必须通过ptrace将自身连接到目标进程，而且这可以在进程已经运行后进行(不仅能在进程开始时进行)。 strace负责连接到进程，通常是用fork和exec启动目标程序后立即进行。
+- pid标识了**目标进程**。进程标识符根据调用者的命名空间来解释。尽管**strace**的处理方式暗示**必须从开始就启用进程追踪**，但这**不是真实的**。跟踪者程序必须通过**ptrace**将自身**连接到目标进程**，而且这可以在**进程已经运行后进行！！！** (不仅能在进程开始时进行)。 strace负责连接到进程，通常是用fork和exec启动目标程序后立即进行。
 - addr和data向内核传递一个内存地址和附加信息。其语义因选择的操作而不同。
 - 借助于符号常数，request用于选择一个操作，由ptrace执行。手册页ptrace(2)、内核源代码中的`<ptrace.h>`列出了所有可能值。可用的选项如下。
     - PTRACE_ATTACH发出一个请求，连接到一个进程并开始跟踪。PTRACE_DETACH从该进程断开
