--- Auto-Git Commit ---

--- a/Linux/Learning/深入Linux内核架构/第13章 系统调用/3. 系统调用的实现.md
+++ b/Linux/Learning/深入Linux内核架构/第13章 系统调用/3. 系统调用的实现.md
@@ -156,9 +156,12 @@ asmlinkage long sys_ptrace(long request, long pid, long addr, long data);
 
 注: `<syscalls.h>`包含了所有**独立于体系结构**的**系统调用的原型**，这些调用的参数在所有体系结构上都是相同的。
 
-- pid标识了**目标进程**。进程标识符根据调用者的命名空间来解释。尽管**strace**的处理方式暗示**必须从开始就启用进程追踪**，但这**不是真实的**。跟踪者程序必须通过**ptrace**将自身**连接到目标进程**，而且这可以在**进程已经运行后进行！！！** (不仅能在进程开始时进行)。 strace负责连接到进程，通常是用fork和exec启动目标程序后立即进行。
-- addr和data向内核传递一个内存地址和附加信息。其语义因选择的操作而不同。
-- 借助于符号常数，request用于选择一个操作，由ptrace执行。手册页ptrace(2)、内核源代码中的`<ptrace.h>`列出了所有可能值。可用的选项如下。
+- **pid**标识了**目标进程**。进程标识符根据调用者的命名空间来解释。尽管**strace**的处理方式暗示**必须从开始就启用进程追踪**，但这**不是真实的**。跟踪者程序必须通过**ptrace**将自身**连接到目标进程**，而且这可以在**进程已经运行后进行！！！** (不仅能在进程开始时进行)。 
+
+**strace**负责**连接到进程**，通常是用**fork**和**exec**启动**目标程序**后立即进行。
+
+- **addr**和**data**向内核传递一个**内存地址**和**附加信息**。其语义因选择的操作而不同。
+- 借助于符号常数，**request**用于选择一个**操作**，由ptrace执行。手册页ptrace(2)、内核源代码中的`<ptrace.h>`列出了所有可能值。可用的选项如下。
     - PTRACE_ATTACH发出一个请求，连接到一个进程并开始跟踪。PTRACE_DETACH从该进程断开
 并结束跟踪。当被跟踪的进程有待决信号时，进程总是会被终止。该选项使得被跟踪进程 在系统调用后或一条汇编语言指令之后暂停。 在被跟踪的进程暂停时，跟踪者程序通过SIGCHLD信号得到一个通知:在被跟踪进程暂停前， 13 跟踪者可用第2章讨论的wait函数等待。 在设置了跟踪之后，将SIGSTOP信号发送给被跟踪进程，这导致跟踪者进程第一次被中断。 在跟踪系统调用时，这是必要的，如下面的例子所示。
  PEEKTEXT、PEEKDATA和PEEKUSR从进程地址空间读取数据。PEEKUSR读取普通的CPU寄存 器和使用的任何其他调试寄存器1(当然，会根据标识符只读取一个寄存器的内容，而不是 读取整个寄存器集合的内容)。PEEKEXT和PEEKDATA从进程的代码段和数据段读取任意字。
